Quick spelling correction & up to date

--- a/src/tex/chapter_2.tex
+++ b/src/tex/chapter_2.tex
@@ -29,18 +29,18 @@
 
             \vspace{0.5cm}
             
-            L'équipe de la Biologie de la Mangrove intégré l'UMR 7205 ISYEB en janvier 2019 en proposant d'étudier la biologie et les adaptations évolutives (par le biais de la symbiose essentiellement) de modèles littoraux côtiers tropicaux évoluant au sein d'écosystèmes extrêmes (forte teneurs en composés soufrés réduits comme la mangrove et les herbiers à phanérogames marines) faciles d'accès.
+            L'équipe de la Biologie de la Mangrove intégré l'UMR 7205 ISYEB en janvier 2019 en proposant d'étudier la biologie et les adaptations évolutives (par le biais de la symbiose essentiellement) de modèles littoraux côtiers tropicaux évoluant au sein d'écosystèmes extrêmes (forte teneur en composés soufrés réduits comme la mangrove et les herbiers à phanérogames marines) faciles d'accès.
         
             \vspace{0.5cm}
         
             Mon tuteur en entreprise durant le stage est Monsieur \underline{Olivier GROS} responsable de l'équipe Biologie de la Mangrove et Professeur des Universités.
             Les étapes de développement de l'application est validée par Monsieur \underline{Manuel CLERGUE} également Professeur et chercheur à l'Université des Antilles.
-            Les membres de l'équipe projet Monsieur \underline{Matheiu BONNEAU} intervenant Mathématique et Madame \underline{SUZANNE} doctorante et la stagiaire en Biologie qui aura la gestion des expériences.
+            Les membres de l'équipe projet Monsieur \underline{Mathieu BONNEAU} intervenant Mathématique et Madame \underline{SUZANNE} doctorante et la stagiaire en Biologie qui aura la gestion des expériences.
 
         \end{flushleft}
 
     \section{Organisation du stage} 
-    Tout au long du stage, des réunions régulières on été organisées avec mon encadrant Monsieur \underline{Manuel CLERGUE} afin de faire le point sur l'avancement du projet.
+    Tout au long du stage, des réunions régulières ont été organisées avec mon encadrant Monsieur \underline{Manuel CLERGUE} afin de faire le point sur l'avancement du projet.
 
     \begin{flushleft}
         Le travail a été répartie en deux axes :
@@ -62,6 +62,12 @@
     \subsection{Contraintes particulière}
     Durant ce stage j'ai eu deux contraintes particulières :
     \begin{itemize}
-        \item  Premièrement, le matériel ayant été commandé avant le début de mon stage et des différents aspects techniques.
-        \item  Deuxièmement, le calendrier stricte en début de stage demandant un système minimal en 10 jours.
+        \item Premièrement, le matériel ayant été commandé avant le début de mon stage et des différents aspects techniques.
+        \item Deuxièmement, le calendrier strict en début de stage demandant un système minimal en 10 jours.
     \end{itemize}
+
+    \vspace{0.5cm}
+
+    Dans la section suivante, nous allons présenter la problématique, notamment le sujet ainsi que l'objectifs du stage.
+
+    % Transition à faire
